# self-ai-knowledge

./: .gitignore  LICENSE  README.md  config.example.toml  install.sh  pyproject.toml
backend/acv_api/: app.py
backend/acv_api/routers/: knowledge.py  search.py  sessions.py  skills.py
backend/acv_cli/: __init__.py  config.py  db.py  knowledge.py  main.py  models.py  sessions.py  skills.py  subprocess_wrap.py
skills/extract-trusted-sources/: SKILL.md
skills/promote-tech-note/: SKILL.md
skills/summarize-session/: SKILL.md
skills/summarize-session/scripts/: summarize_session.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/layout/: Layout.tsx
web/src/pages/: KnowledgePage.tsx  SessionsPage.tsx  SkillsPage.tsx
